tests/paczka1/fuzzy1/48802379.err
Error in line 2: A470 A470 77,3
Error in line 4: A470 S223 74,1
Error in line 15: RkW A47r 57,8
Error in line 12: RkW S341 95,8
